# hepa

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  adapter-lessons.md
.github/workflows/: ci.yml  release.yml
crates/hepa-adapters/: Cargo.toml
crates/hepa-adapters/src/: builtin.rs  configured_adapter_fake_bins.rs  container.rs  custom.rs  design_pipeline.rs  doctor.rs  engine.rs  external_worker.rs  fake.rs  interactive.rs  lib.rs  local_worker.rs  pi.rs  registry.rs  routing.rs  shell_command.rs  spec.rs  usage.rs  user_reviewer.rs  user_worker.rs  version_pinning.rs
crates/hepa-adapters/tests/: safety_boundaries.rs
crates/hepa-cli/: Cargo.toml
crates/hepa-cli/src/: fleet.rs  main.rs  run.rs
crates/hepa-cli/tests/: benchmark_matrix.rs  fleet_integration.rs  integration_release_gate.rs  perf_budgets.rs
crates/hepa-core/: Cargo.toml
crates/hepa-core/src/: artifacts.rs  bench.rs  config.rs  conflict_planner.rs  contracts.rs  cost_accounting.rs  env_allowlist.rs  fleet_monitor.rs  fleet_registry.rs  hard_blockers.rs  hermes_profiles.rs  lane_state.rs  lib.rs  monitor.rs  notifications.rs  perf_budget.rs  readiness.rs  redaction.rs  resource_governor.rs  scheduler.rs  timing_trends.rs
crates/hepa-core/tests/: hoca_reference_fixtures.rs  privacy_scan.rs
crates/hepa-git/: Cargo.toml
crates/hepa-git/src/: branches.rs  lib.rs  pr.rs  staging.rs  worktree.rs
crates/hepa-kanban/: Cargo.toml
crates/hepa-kanban/src/: card_mapping.rs  doctor.rs  github_webhook.rs  lib.rs  spec_import.rs  sync.rs  transition.rs
crates/hepa-memory/: Cargo.toml
crates/hepa-memory/src/: lib.rs
crates/hepa-review/: Cargo.toml
crates/hepa-review/src/: arbitration.rs  fanout.rs  lib.rs  parser.rs  repair.rs
docs/: README.md  adapter-lessons.md  adapters.md  fleet.md  hermes-kanban.md  hoca-parity.md  performance.md  releasing.md  security-model.md  stretch-phase-11.md
hermes-profiles/: README.md
hermes-profiles/hepa-manager/: README.md  SOUL.md  config.example.yaml
hermes-profiles/hepa-review-manager/: README.md  SOUL.md  config.example.yaml
hermes-profiles/hepa-reviewer/: README.md  SOUL.md  config.example.yaml
hermes-profiles/hepa-worker/: README.md  SOUL.md  config.example.yaml
templates/: README.md
(+7 files in other folders)
