[workspace]
members = [
    "crates/hepa-core",
    "crates/hepa-cli",
    "crates/hepa-adapters",
    "crates/hepa-kanban",
    "crates/hepa-git",
    "crates/hepa-review",
    "crates/hepa-memory",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kaybarax/hepa"
rust-version = "1.85"
