[package]
name = "hepa-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hepa-adapters = { path = "../hepa-adapters" }
hepa-core = { path = "../hepa-core" }
hepa-git = { path = "../hepa-git" }
hepa-kanban = { path = "../hepa-kanban" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
